refactor: use pure Java H2 storage